force-app/main/default/objects/Guidelines__kav/Guidelines__kav.object-meta.xml
<CustomObject>
    <articleTypeChannelDisplay>
        <articleTypeTemplates>
            <channel>App</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Prm</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Csp</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Pkb</channel>
            <template>Toc</template>
        </articleTypeTemplates>
    </articleTypeChannelDisplay>
    <description>Guideline descriptions, details and relevant file attachment</description>
    <label>Guidelines</label>
    <pluralLabel>Guidelines</pluralLabel>
</CustomObject>