force-app/main/default/objects/Guidelines__kav/fields/Guideline_descriptions__c.field-meta.xml
<CustomField>
    <fullName>Guideline_descriptions__c</fullName>
    <label>Guideline descriptions</label>
    <length>255</length>
    <type>Text</type>
</CustomField>