force-app/main/default/objects/Guidelines__kav/fields/Guideline_Details__c.field-meta.xml
<CustomField>
    <fullName>Guideline_Details__c</fullName>
    <label>Guideline Details</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>