force-app/main/default/objects/Guidelines__kav/fields/Relevant_File_Attachment__c.field-meta.xml
<CustomField>
    <fullName>Relevant_File_Attachment__c</fullName>
    <label>Relevant File Attachment</label>
    <type>File</type>
</CustomField>